--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -1,33 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%  This is a sample LaTeX input file for your contribution to 
-%  the PHYSOR2018 topical meeting.
-%
-%  Please use it as a template for your full paper 
-%    Accompanying/related file(s) include: 
-%       1. Document class/format file: physor2018.cls
-%       2. Sample Postscript Figure:   figure.pdf
-%       3. A PDF file showing the desired appearance: physor2018_template.pdf
-%       4. cites.sty and citesort.sty that might be needed by some users 
-%    Direct questions about these files to: rcarlos.lope@gmail.com
-%											armando.gomez@inin.gob.mx
-%
-%    Notes: 
-%      (1) You can use the "dvips" utility to convert .dvi 
-%          files to PostScript.  Then, use either Acrobat 
-%          Distiller or "ps2pdf" to convert to PDF format. 
-%      (2) Different versions of LaTeX have been observed to 
-%          shift the page down, causing improper margins.
-%          If this occurs, adjust the "topmargin" value in the
-%          physor2018.cls file to achieve the proper margins. 
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass[letterpaper]{physor2018}
 %
-%  various packages that you may wish to activate for usage 
+%  various packages that you may wish to activate for usage
 \usepackage{tabls}
 \usepackage{cites}
 \usepackage{epsf}
@@ -44,34 +18,27 @@
 %
 % Define title...
 %
-\title{TITLE OF THE PAPER: CENTERED, UPPERCASE, 14 POINT TIMES \\
-  NEW ROMAN, ON SECOND LINE FROM THE TOP MARGIN, NOT \\
-  MORE THAN 3 LINES LONG}
+\title{LIMITING CASES OF THE BINARY FORMULATION OF DECAY EQUATIONS}
 %
 % ...and authors
 %
 \author{%
-  % FIRST AUTHORS 
+  % FIRST AUTHORS
   %
-  \textbf{Author A$^1$, Author B$^2$, and Author C$^3$}\footnote{Footnote, if necessary, in Times New Roman font and font size 10} \\
-  $^1$Name of Institution 1  \\
-  Corresponding Address \\ 
+  \textbf{Anthony M. Scopatz$^1$} \\
+  $^1$University of South Carolina \\
+  541 Main Street #011, \\
+  Columbia, SC 29208 \\
 \\
-  $^2$Name of Institution 2  \\ 
-    Corresponding Address \\ 
-\\
-  $^3$Name of Institution 3  \\
-     Corresponding Address \\
-     \\
-  \url{AuthorA@email}, \url{AuthorB@email}, \url{AuthorC@email}
+  \url{scopatz@cec.sc.edu}
 }
 %
 % Insert authors' names and short version of title in lines below
 %
 \newcommand{\authorHead}      % Author's names here use et al. if more than 3
-           {First author}  
+           {Scopatz}
 \newcommand{\shortTitle}      % Short title here (Shorten to fit all into a single line)
-           {Paper Title }  
+           {Limiting cases of the Binary Formulation of Decay Equations}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %   BEGIN DOCUMENT
@@ -79,79 +46,79 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \maketitle
-\justify 
+\justify
 
 \begin{abstract}
-  Use 8.5$\times$11 paper size, with 1'' margins on all sides.  A required 200-250 
+  Use 8.5$\times$11 paper size, with 1'' margins on all sides.  A required 200-250
   word abstract starts on this line.  Leave two blank lines before ``ABSTRACT''
-  and one after.  Use 11 point Times New Roman here and single 
-  spacing. The abstract is a very brief summary highlighting main 
+  and one after.  Use 11 point Times New Roman here and single
+  spacing. The abstract is a very brief summary highlighting main
   accomplishments, what is new, and how it relates to the state-of-the-art.
 \end{abstract}
 \keywords{list of three to five key words}
 
-\section{INTRODUCTION} 
-Paper starts here with two blank lines before first section title.  Use 
-8.5$\times$11 paper size, with 1'' margins on all sides.  Use one blank line 
+\section{INTRODUCTION}
+Paper starts here with two blank lines before first section title.  Use
+8.5$\times$11 paper size, with 1'' margins on all sides.  Use one blank line
 before and after each subsequent section’s title.  Most of the formatting is globally
-set by the specifications given in the \emph{physor2018.cls} file.  
-First-level section titles must be all uppercase and centered, and must 
+set by the specifications given in the \emph{physor2018.cls} file.
+First-level section titles must be all uppercase and centered, and must
 be numbered in Arabic numerals as shown above.  Unlike the Word and WordPerfect
-templates, the body text and section titles for this \LaTeX\ template use 
-11-point font.  We have found that the 11-point font in \LaTeX\ more closely 
-matched the 12-point font in Word and WordPerfect.  Introduce the topic of your work 
+templates, the body text and section titles for this \LaTeX\ template use
+11-point font.  We have found that the 11-point font in \LaTeX\ more closely
+matched the 12-point font in Word and WordPerfect.  Introduce the topic of your work
 in this section.
 
-The first line of a paragraph is not indented; rather add one blank line between 
-paragraphs.  This is done automatically. If you are a \LaTeX\ expert you 
-can likely define the established format characteristics in a more elegant 
-manner than what is done here.  This is perfectly fine, so long as the 
-established paper format/appearance is maintained.  This template is merely 
+The first line of a paragraph is not indented; rather add one blank line between
+paragraphs.  This is done automatically. If you are a \LaTeX\ expert you
+can likely define the established format characteristics in a more elegant
+manner than what is done here.  This is perfectly fine, so long as the
+established paper format/appearance is maintained.  This template is merely
 to assist with maintaining uniformity in paper appearance.
 
-There are four types of reference styles: journal paper\cite{journal}, 
+There are four types of reference styles: journal paper\cite{journal},
 proceedings paper\cite{proc_paper}, book\cite{book}, and website\cite{website}.
-References to websites are discouraged, but acceptable if absolutely necessary. It 
-is the author’s responsibility to check links in the PDF file of your paper. 
-All references should be cited in the text in numerical order, in order of 
+References to websites are discouraged, but acceptable if absolutely necessary. It
+is the author’s responsibility to check links in the PDF file of your paper.
+All references should be cited in the text in numerical order, in order of
 appearance as [5-7].
 
-The page limit for PHYSOR 2018 papers is 12 pages. It is strongly recommended that 
+The page limit for PHYSOR 2018 papers is 12 pages. It is strongly recommended that
 the length of any final paper should not exceed 12 pages.
 
-\section{SECOND OR SUBSEQUENT MAJOR HEADING} 
+\section{SECOND OR SUBSEQUENT MAJOR HEADING}
 \label{sec:first}
 
-This is Section~\ref{sec:first}. It is followed by a subsection, that is, 
-\ref{sec:second}. The style for subsection titles and all text in this template is defined 
+This is Section~\ref{sec:first}. It is followed by a subsection, that is,
+\ref{sec:second}. The style for subsection titles and all text in this template is defined
 in the \emph{physor2018.cls} file.  Make sure to avoid widow/orphan lines.
 
-\subsection{Subsection Title: First Character of Each Non-trivial Word is Uppercase} 
+\subsection{Subsection Title: First Character of Each Non-trivial Word is Uppercase}
 \label{sec:second}
 
-Double-space before and after secondary titles is automatic.  Figures and 
+Double-space before and after secondary titles is automatic.  Figures and
 tables should appear as close as possible to where they are first
-cited, e.g., Fig.~\ref{fig:amdahl}, in the text.  Figures are numbered in Arabic 
-numerals, with the caption centered below the figure, in \textbf{boldface}. For a better 
-arrangement it is strongly recommended that all the figures must be placed in the``Figures'' 
+cited, e.g., Fig.~\ref{fig:amdahl}, in the text.  Figures are numbered in Arabic
+numerals, with the caption centered below the figure, in \textbf{boldface}. For a better
+arrangement it is strongly recommended that all the figures must be placed in the``Figures''
 folder. Triple-space before the figure, and after the figure caption.
 
 \begin{figure}[!htb]
   \centering
   \includegraphics[scale=0.60]{./Figures/figure.pdf}
-  \caption{SCALE/TRITON-NEWT Model of BWR Assembly in Order to Show and Example of a Figure and a Multi-line Caption}   
+  \caption{SCALE/TRITON-NEWT Model of BWR Assembly in Order to Show and Example of a Figure and a Multi-line Caption}
   \label{fig:amdahl}
 \end{figure}
 
 When importing figures or any graphical image please verify two things:
 \vspace{-0.65cm} % THE DISTANCE BETWEEN THE ":" AND THE FIRST LINE OF THE LIST MAY VARY DEPENDING ON THE TEXT LENGHT, CHANGE THIS VALUE DEPENDING ON YOUR NEEDS.
 \begin{itemize} \itemsep1pt \parskip0pt \parsep0pt
-\item Any number, text or symbol is in Times font and is not smaller than 
+\item Any number, text or symbol is in Times font and is not smaller than
   10-point after reduction to the actual window in your paper
 \item That it can be translated into PDF
 \end{itemize}
 
-Equations, such as Eq. (\ref{sample_equation}), should be centered and 
+Equations, such as Eq. (\ref{sample_equation}), should be centered and
 sequentially numbered to the flush right of the formula.
 
 \begin{equation}
@@ -159,28 +126,28 @@ sequentially numbered to the flush right of the formula.
   \mathrm{Speedup}=\frac{1}{\frac{f}{p}+(1-f)}
 \end{equation}
 
-The continuation of a paragraph after an equation should not be indented.  
-All paragraphs, as well as section or subsection headings, are separated by 
+The continuation of a paragraph after an equation should not be indented.
+All paragraphs, as well as section or subsection headings, are separated by
 just one single empty line.
 
 \subsubsection{Sub-subsection level and lower: only first character uppercase}
 
 See Table \ref{table:example} for a sample table.  The ``tabls'' package is
-recommended for improved row and column spacing.  Notice the caption appears 
-above the table by setting the \verb!\caption! command immediately 
-after the \verb!\begin{table}!. Tables are numbered in Roman 
-numerals, with the caption centered above the table, in \textbf{boldface}.  
+recommended for improved row and column spacing.  Notice the caption appears
+above the table by setting the \verb!\caption! command immediately
+after the \verb!\begin{table}!. Tables are numbered in Roman
+numerals, with the caption centered above the table, in \textbf{boldface}.
 Triple-space before and after the table.
 
 \begin{table}[!htb]
   \centering
   \caption{\bf Parallel Performance for the Sample Problem}
-  \label{table:example} 
-  \begin{tabular}{|c|c|c|c|} \hline 
+  \label{table:example}
+  \begin{tabular}{|c|c|c|c|} \hline
    Number of & Wall-Clock & Speedup & Efficiency \\
    Processors & Time$^{a}$ (min) & (T$_{s}$/T$_{p}$) & (\%) \\ \hline
     \ 1 &  100.0 & \ ---    & ---  \\ \hline
-    \ 2 &   52.6 & \ 1.9    & 95.0 \\ \hline 
+    \ 2 &   52.6 & \ 1.9    & 95.0 \\ \hline
   \end{tabular}
 \end{table}
 
@@ -192,43 +159,22 @@ Present your summary and conclusions here.
 
 If variables are extensively used in the text, a Nomenclature section would be helpful to the readers.
 
-\section*{ACKNOWLEDGEMENTS}
 
-Acknowledge the help of colleagues and sources of funding, as appropriate.
-
-\textbf{As an example:} The format for this template was adapted from the \LaTeX 
-template for the PHYSOR-2012 conference posted and available on the Internet and 
-most of the \LaTeX\ format definitions contained in this were already defined. The 
-PHYSOR-2018 organizing committee deeply thank the PHYSOR-2012 technical committee 
+\textbf{As an example:} The format for this template was adapted from the \LaTeX
+template for the PHYSOR-2012 conference posted and available on the Internet and
+most of the \LaTeX\ format definitions contained in this were already defined. The
+PHYSOR-2018 organizing committee deeply thank the PHYSOR-2012 technical committee
 for this great support.
 
-% You can enter a bibliography into the document using the following format, or use the 
-% bibliography style file "physor.bst" found in the template directory.  You can use the bibliography style file
-% by replacing the current bibliography block with:
-% \setlength{\baselineskip}{12pt}
-% \bibliographystyle{physor}
-% \bibliography{physor}
-
+% Bibliography
 \setlength{\baselineskip}{12pt}
-\begin{thebibliography}{300}
-\bibitem{journal} B. Author(s), ``Title,'' \emph{Journal Name in Italic}, 
-  \textbf{Volume in Bold}, pp. 34-89 (19xx).
-\bibitem{proc_paper} C. D. Author(s), ``Article Title,'' \emph{Proceedings of
-  Meeting in Italic}, Location, Dates of Meeting, Vol. n, pp. 134-156 
-  (19xx).
-\bibitem{book} E. F. Author, \emph{Book Title in Italic}, Publisher, City \&
-  Country (19xx). 
-\bibitem{website} ``Spallation Neutron Source: The next-generation 
-  neutron-scattering facility in the United States,'' 
-  \url{http://www.sns.gov/documentation/sns\_brochure.pdf} (2002).
-\end{thebibliography}
+\bibliographystyle{physor}
+\bibliography{physor}
 
 \appendix
 \gdef\thesection{APPENDIX \Alph{section}}
 \section{Sample Appendix 1}
 \label{app:a}
-If necessary, include Appendices numbered in upper case alphabetical order. This is \ref{app:a}. 
-
-
+If necessary, include Appendices numbered in upper case alphabetical order. This is \ref{app:a}.
 
 \end{document}
