--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -23,13 +23,13 @@
 % ...and authors
 %
 \author{%
-  % FIRST AUTHORS
+  % FIRST AUTHORS j
   %
-  \textbf{Anthony M. Scopatz$^1$} \\
+  \textbf{Anthony M. Scopatz$^1$}\footnote{}\\
   $^1$University of South Carolina \\
-  541 Main Street #011, \\
+  541 Main Street \#011, \\
   Columbia, SC 29208 \\
-\\
+  \\
   \url{scopatz@cec.sc.edu}
 }
 %
@@ -105,7 +105,7 @@ folder. Triple-space before the figure, and after the figure caption.
 
 \begin{figure}[!htb]
   \centering
-  \includegraphics[scale=0.60]{./Figures/figure.pdf}
+  %\includegraphics[scale=0.60]{./Figures/figure.pdf}
   \caption{SCALE/TRITON-NEWT Model of BWR Assembly in Order to Show and Example of a Figure and a Multi-line Caption}
   \label{fig:amdahl}
 \end{figure}
