--- a/physor.bib
+++ b/physor.bib
@@ -10,3 +10,9 @@ doi = "https://doi.org/10.1016/j.anucene.2006.02.004",
 url = "http://www.sciencedirect.com/science/article/pii/S0306454906000284",
 author = "Jerzy Cetnar"
 }
+@techreport{harr2007precise,
+  title={Precise calculation of complex radioactive decay chains},
+  author={Harr, Logan J},
+  year={2007},
+  institution={AIR FORCE INST OF TECH WRIGHT-PATTERSON AFB OH SCHOOL OF ENGINEERING AND MANAGEMENT}
+}
